# orcestr-media-transcriber

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.ru.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  start_windows.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: orcestr-repo-notifier.yml  release-desktop.yml  validate.yml
.run/: audit.run.xml  backend sync.run.xml  backend.run.xml  build.run.xml  dev.run.xml  format check.run.xml  format.run.xml  frontend typecheck.run.xml  install.run.xml  mypy.run.xml  pytest.run.xml  release major.run.xml  release minor.run.xml  release patch.run.xml  ruff --fix.run.xml  ruff format.run.xml
backend/: pyproject.toml
backend/src/media_transcriber/: __init__.py  config.py  desktop_entry.py  jobs.py  main.py  media.py  media_tools.py  schemas.py  transcription.py
backend/tests/: test_media.py  test_transcription.py
frontend/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  desktop.ts  types.ts
frontend/src/components/: FileDropZone.tsx  JobRow.tsx
frontend/src/styles/: global.css
packaging/python/: sitecustomize.py
packaging/scripts/: build_backend.py  build_tauri.cjs  copy_ffmpeg.cjs  prepare_sidecar.cjs
scripts/: release.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
