[project]
name = "orcestr-media-transcriber"
version = "0.1.2"
description = "Small local web app for batch audio/video transcription through OpenAI."
requires-python = ">=3.12,<3.13"
readme = "../README.md"
authors = [{ name = "Artasov" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
package = [
    "pyinstaller>=6.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_transcriber"]

[tool.hatch.build.targets.sdist]
include = ["src/media_transcriber"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--basetemp=.pytest-tmp"]
