[package]
name = "orcestr-media-transcriber-desktop"
version = "0.1.4"
description = "Native desktop shell for Orcestr Media Transcriber"
authors = ["Orcestr"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "system-proxy"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
